# cluster-manager

./: .gitignore  Dockerfile  Makefile  requirements.txt
app/: versions.ini
app/playbooks/deploy.d/container-storage/: configure.py  container-storage.yml  local-storage.yml  main.sh
app/playbooks/deploy.d/wipefs/: configure.py  main.sh
config/: Dockerfile  entrypoint.sh
config/faros_config/faros_config/: __init__.py  network.py
config/faros_config_ui/: README.md  setup.cfg
config/faros_config_ui/faros_config_ui/: api.py  app.py  config.py  forms.py
config/faros_config_ui/faros_config_ui/form_data/: configform.py
config/faros_config_ui/faros_config_ui/templates/: base.html  form.html  form_macros.html  index.html  validate.html
config_ui/: Dockerfile  entrypoint.py  entrypoint.sh
config_ui/app/: setup.cfg
config_ui/app/faros_config_ui/: app.py
home/: .bashrc
