[metadata]
name = faros-config-ui
version = file: VERSION.txt
description = Project Faros configuration web application
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPL v3

[options]
packages = find:
zip_safe = False
install_requires =
    Flask==1.1.2
    PyYAML==5.3.1
    faros_config==0.1.0
    Flask-WTF==0.14.3
    Flask-Bootstrap==3.3.7.1
