[metadata]
name = faros-config-ui
version = file: VERSION.txt
description = Project Faros configuration web application
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU GPL v3

[options]
packages = find:
zip_safe = False
install_requires =
    Flask==1.1.2
    PyYAML==5.3.1
